logs/infinite-160601_005056.log
TTLocalizer: Running in language: english
from toontown.toonbase.TTLocalizerEnglish import *
OTPLocalizer: Running in language: english
from otp.otpbase.OTPLocalizerEnglish import *
Preloading suits...
Preloading Toon heads...
Preloading avatars...
Traceback (most recent call last):
  File "D:\Documents\ToontownSourcecode\Toontown\toontown\toonbase\ClientStart.py", line 234, in loadScripts
    execfile('mods/'+scriptName,globals())
  File "mods/Compilation.txt", line 206, in <module>
    toonAnywhere = DirectButton(text = ("Enable Toonup anywhere", "ENABLE TOONUP ANYWHERE", "enable toonup anywhere", "enable toonup anywhere"), scale=.06, pos = (-1,-0,-.3), command=ToonupAnywhere.toonUpSetUp)
NameError: name 'ToonupAnywhere' is not defined

phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['FndsLst_ScrollUp', 'FndsLst_ScrollDN', 'FndsLst_ScrollUp_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['FndsLst_ScrollUp', 'FndsLst_ScrollDN', 'FndsLst_ScrollUp_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3.5/models/gui/friendslist_gui.bam
['Horiz_Arrow_UP', 'Horiz_Arrow_DN', 'Horiz_Arrow_Rllvr']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
phase_3/models/gui/quit_button.bam
['QuitBtn_UP', 'QuitBtn_DN', 'QuitBtn_RLVR']
test2
{401000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1BC652B0>}
__handleAvatarChooserDone: 100000025, 'King Crunchyphew', ('rss', 'ls', 'l', 'm', 24, 0, 24, 24, 10, 11, 0, 11, 7, 9), 1
0
Reading DNA file... phase_3.5/dna/storage_tutorial.pdna
Reading DNA file... phase_3.5/dna/storage_interior.pdna
Reading DNA file... phase_3.5/dna/tutorial_street.pdna
Reading DNA file... phase_3.5/dna/tutorial_street.pdna
[]
[<toontown.catalog.CatalogManager.CatalogManager instance at 0x13FBD490>, render/toon_interior_tutorial.egg/g1/npc_origin_0/Tutorial Tom-401003808, <toontown.building.DistributedTutorialInterior.DistributedTutorialInterior instance at 0x142EB508>, <toontown.building.DistributedDoor.DistributedDoor instance at 0x13FC0260>, <toontown.building.DistributedTrophyMgr.DistributedTrophyMgr instance at 0x13FBD530>, <toontown.uberdog.ClientServicesManager.ClientServicesManager instance at 0x1BC5E4E0>, <toontown.friends.TTIFriendsManager.TTIFriendsManager instance at 0x1BC5E5D0>, <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x1BC652B0>, <toontown.distributed.ToontownDistrictStats.ToontownDistrictStats instance at 0x1BF49378>, <toontown.ai.NewsManager.NewsManager instance at 0x13FBD198>, <toontown.safezone.SafeZoneManager.SafeZoneManager instance at 0x13FBD2D8>, <toontown.tutorial.TutorialManager.TutorialManager instance at 0x13FBD350>, <toontown.estate.EstateManager.EstateManager instance at 0x13FBD0F8>, <toontown.uberdog.DistributedDeliveryManager.DistributedDeliveryManager instance at 0x1BC5E670>, <toontown.friends.TTPlayerFriendsManager.TTPlayerFriendsManager instance at 0x1BC5E580>, <toontown.coderedemption.TTCodeRedemptionMgr.TTCodeRedemptionMgr instance at 0x1BC5E710>, <toontown.uberdog.TTSpeedchatRelay.TTSpeedchatRelay instance at 0x1BC5E620>]
[render/toon_interior_tutorial.egg/g1/npc_origin_0/Tutorial Tom-401003808, <toontown.tutorial.TutorialManager.TutorialManager instance at 0x13FBD350>]
[<toontown.tutorial.TutorialManager.TutorialManager instance at 0x13FBD350>]
['DistributedObject_initialized', '_DistributedObject__barrierContext', '_DistributedObject__callbacks', '_DistributedObject__nextContext', '_MSGRmessengerId', '_TutorialManager__handleStopTutorial', '__doc__', '__init__', '__module__', '_addTask', '_autoInterestHandle', '_clearTask', '_deactivateDO', '_delayDeleteForceAllow', '_delayDeleted', '_destroyDO', '_retrieveCachedData', '_token2delayDeleteName', 'accept', 'acceptOnce', 'activeState', 'addInterest', 'addTask', 'announceGenerate', 'autoInterests', 'b_setLocation', 'cacheable', 'children', 'classTree', 'cr', 'd_allDone', 'd_rejectTutorial', 'd_requestSkipTutorial', 'd_requestTutorial', 'd_setLocation', 'd_toonArrived', 'dclass', 'delete', 'deleteOrDelay', 'detectLeaks', 'disable', 'disableAndAnnounce', 'disableAnnounceAndDelete', 'doCallbackContext', 'doId', 'doMethodLater', 'doneBarrier', 'enterTutorial', 'execCommand', 'flushCachedData', 'generate', 'generateInit', 'getAllAccepting', 'getAutoInterests', 'getBarrierData', 'getCacheable', 'getCachedData', 'getCallback', 'getCallbackArgs', 'getCallbackContext', 'getCurrentContexts', 'getDelayDeleteCount', 'getDelayDeleteEvent', 'getDisableEvent', 'getDoId', 'getLocation', 'getNeverDisable', 'getParentObj', 'handleChildArrive', 'handleChildArriveZone', 'handleChildLeave', 'handleChildLeaveZone', 'handleQueryObjectChildrenLocalDone', 'hasCachedData', 'hasParentingRules', 'ignore', 'ignoreAll', 'isAccepting', 'isDisabled', 'isGenerated', 'isGridParent', 'isIgnoring', 'isLocal', 'neverDisable', 'notify', 'parentId', 'postGenerateMessage', 'removeAllTasks', 'removeInterest', 'removeTask', 'sendDeleteMsg', 'sendDisableMsg', 'sendUpdate', 'setBarrierData', 'setCacheable', 'setCachedData', 'setLocation', 'setNeverDisable', 'skipTutorialResponse', 'status', 'taskName', 'uniqueName', 'updateAllRequiredFields', 'updateRequiredFields', 'updateRequiredOtherFields', 'zoneId']
Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "<string>", line 1
    print(dir(base.cr.doFindAll('TutorialManager')[0].d_requestSkipTutorial())
                                                                             ^
SyntaxError: unexpected EOF while parsing

['__class__', '__delattr__', '__doc__', '__format__', '__getattribute__', '__hash__', '__init__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__']
None
frame rate: 58.9 fps|0.005d|1 avs||328|332||0x1002|0x6738|350.0MB|384.0MB|16330.4MB|433|nt.2.6.2|3.300,3.300|3,6 cpus|OpenGL
None
None
None
None
test2
